Adding an item to an existing category

--- a/src/app/category-list/category-list.component.html
+++ b/src/app/category-list/category-list.component.html
@@ -3,11 +3,11 @@
 		<label>Item</label> <input name="item" id="item" #newitem>
 	</div>
 	<div class="field">
-		<label>Category</label> <input name="category" id="category"
-			#newcategory>
+		<label>Categories</label> <input name="categories" id="categories"
+			#newcategories>
 	</div>
 
-	<button (click)="addCategory(newcategory, newitem)"
+	<button (click)="addCategories(newcategories, newitem)"
 		class="ui right floated button">Submit</button>
 </form>
 
