Removing an item from a category

--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -1,7 +1,12 @@
 <div *ngIf="category">
 	<div class="ui list">
 		<div class="item" *ngFor="let item of category.items">
-			<a class="ui button" href="{{item}}" target="_blank">{{item}}</a>
+			<div class="ui left labeled button"> 
+				<a class="ui basic label"> {{item}} </a>
+				<div class="ui icon button" (click)="deleteItem($event)">
+					<i class="times icon"></i>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
