A category is now added to the selectec category (if any)

--- a/src/app/category-list/category-list.component.html
+++ b/src/app/category-list/category-list.component.html
@@ -1,6 +1,6 @@
 <form class="ui large form segment">
 	<div class="field">
-		<label>Item</label> <input name="item" id="item" #newitem>
+		<label>Items</label> <input name="item" id="item" #newitem>
 	</div>
 	<div class="field">
 		<label>Categories</label> <input name="categories" id="categories"
