Fixed bug when deleting a selected category; added tooltips

--- a/src/app/category-list/category-list.component.html
+++ b/src/app/category-list/category-list.component.html
@@ -1,8 +1,8 @@
 <form class="ui large form segment">
-	<div class="field">
-		<label>Items</label> <input name="item" id="item" #newitem>
+	<div class="field" data-tooltip="An item, e.g.: CommonGround NorthernSoul" data-position="top right">
+		<label>Item</label> <input name="item" id="item" #newitem>
 	</div>
-	<div class="field">
+	<div class="field" data-tooltip="One or more categories each separated by space, e.g.: Above&Beyond Trance 2018" data-position="top right">
 		<label>Categories</label> <input name="categories" id="categories"
 			#newcategories>
 	</div>
