Introduced a @Injectable CategoryService

--- a/src/app/category-list/category-list.component.html
+++ b/src/app/category-list/category-list.component.html
@@ -1,5 +1,5 @@
 <form class="ui large form segment">
-	<div class="field" data-tooltip="An item, e.g.: CommonGround NorthernSoul" data-position="top right">
+	<div class="field" data-tooltip="An item, e.g.: NorthernSoul" data-position="top right">
 		<label>Item</label> <input name="item" id="item" #newitem>
 	</div>
 	<div class="field" data-tooltip="One or more categories each separated by space, e.g.: Above&Beyond Trance 2018" data-position="top right">
@@ -40,7 +40,7 @@
 		</div>
 		<div class="twelve wide column">
 			<div class="ui segment">
-				<app-item-list [category]="selectedCategory"></app-item-list>
+				<app-item-list></app-item-list>
 			</div>
 		</div>
 	</div>
