--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="category">
+<div *ngIf="categoryService.getSelectedCategory()">
 	<div class="ui list">
-		<div class="item" *ngFor="let item of category.items">
+		<div class="item" *ngFor="let item of categoryService.getSelectedCategory().items">
 			<div class="ui left labeled button"> 
 				<a class="ui basic label"> {{item}} </a>
 				<div class="ui icon button" (click)="deleteItem($event)">
