--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -2,7 +2,7 @@
 	<div class="ui list">
 		<div class="item" *ngFor="let item of category.items">
 			<div class="ui left labeled button"> 
-				<a class="ui basic label"> {{item}} </a>
+				<a class="ui basic label" href="{{item}}"> {{item}} </a>
 				<div class="ui icon button" (click)="deleteItem($event)">
 					<i class="times icon"></i>
 				</div>
